[package]
name = "nextjs-cache-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-nats = "0.37.0"
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures-util = "0.3.31"
log = { version = "0.4.22", features = ["kv"] }
reqwest = { version = "0.12.8", features = ["brotli", "deflate", "gzip", "http2", "native-tls-alpn", "rustls-tls"], default-features = false }
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
